# git-hooks

./: .hooks.yml  Cargo.toml  README.adoc  hooks.adoc
.github/workflows/: ci.yml  release.yml
src/: git.rs  main.rs  utils.rs
