[package]
name = "git-hook-manager"
version = "0.1.0"
authors = ["Paul Ollivier <contact@paulollivier.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
log = "0"
pretty_env_logger = "0.4.0"
anyhow = "1.0.34"